@@ -1,5 +1,5 @@
 AUX libview-0.5.6-pcfix.patch 600 RMD160 58869acfda194c671bc6c858d0f8cfd7bc62851b SHA1 393d7d2e440173cd0cb2edc7de10629dab1f1c6e SHA256 4d93c8067fb1d371780a665fff731dd27ce3daac983ea63efbb7ba2bad492d39
-DIST libview-0.6.5.tar.bz2 304688 RMD160 ba76da5bcd66b08214d20f4be6dc32e8f597ca88 SHA1 3448f8cfbeb864217c45868264cf467a91594d09 SHA256 09e4cb07b0ccc88521aac0f14b7f8b21b1a1ecaad6974e04c2d94cc8317b0ee7
-EBUILD libview-0.6.5.ebuild 673 RMD160 11c609db7fdd878ed906d635f8c181ef99d2b59a SHA1 53d95fcf47b9b270c141a0293e76bca996b2a76c SHA256 bd6bdbbd8d61af72a8b586e10464394f22d23e212009151004f0012addaa9fcf
-MISC ChangeLog 288 RMD160 3518df54ce8eabdcdcda3084d247d87c1af74da7 SHA1 663d219ccf35cc610b25f5958a31c211aaac5c86 SHA256 80aeb2581c25e033abeb76cb3417f03c767e3c4ef36625408143f6c21571c27e
+DIST libview-0.6.6.tar.bz2 304958 RMD160 1b118bd133dd97f19210389c3b1dbe80bad68cc9 SHA1 6ec44d55ceaf1a80196f1ee300deca75a4c9c793 SHA256 2b991bf150c5488b43f807e89bdbd64b2eb3bd433abbdfb68c3eec52cbaa59ab
+EBUILD libview-0.6.6.ebuild 725 RMD160 d443135e403fd08a574bce696530d68dd0b7fc21 SHA1 6b0a8c620da9519b97523c5ee70e205f05ec76fc SHA256 0ebaa38210f670f1832718880d86821deac3baafb69a542617a9c53be7bcee88
+MISC ChangeLog 433 RMD160 ad5ffbcdf5ec0deb05ee5b74dfd1b97d81619812 SHA1 983fcb101d3292e47dd27aec3f917ae788656807 SHA256 6b3b1e9388561bcf4fd3b09bc04d15d5c9321203263c3fb52eb7a3541bc47c01
 MISC metadata.xml 210 RMD160 c221abe824d7def33ad4b46921558f39f5c86c9c SHA1 c5d824f3b06a9b92a197c9dd811eafdf9f5e7487 SHA256 046ab532b99c45cb8b7c910ce6058555fb8d02a88aa9ffa4fa5a6bda923f1e11
